--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-native-svg": "^15.12.0",
     "simple-icons": "^15.0.0",
     "supabase": "^2.20.12"
